--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ config.log
 config.status
 config.guess
 configure
+compile
 depcomp
 missing
 ltmain.sh
@@ -24,18 +25,21 @@ install-sh
 stamp-h1
 libtool
 Doxyfile
-
 .tarball-version
 .version
-
 .*.swp
-
-doc/
-
-src/rtl_sdr
-src/rtl_tcp
-
+rtl_sdr
+rtl_tcp
+rtl_adsb
+rtl_eeprom
+rtl_power
+rtl_fm
+rtl_test
 CMakeCache.txt
 */CMakeFiles
 CMakeFiles
 *.cmake
+.DS_Store
+._*
+.vscode
+.dirstamp
